force-app/main/default/objects/User_Modulo__c/User_Modulo__c.object-meta.xml
<CustomObject>
    <label>User Modulo</label>
    <nameField>
        <label>User Modulo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Modulos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>