force-app/main/default/objects/User_Modulo__c/fields/Avance__c.field-meta.xml
<CustomField>
    <fullName>Avance__c</fullName>
    <formula>Unidades_Completadas__c/Modulo__r.Unidades_Totales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>