force-app/main/default/objects/User_Modulo__c/fields/Modulo__c.field-meta.xml
<CustomField>
    <fullName>Modulo__c</fullName>
    <label>Modulo</label>
    <referenceTo>Modulo__c</referenceTo>
    <relationshipLabel>User Modulos</relationshipLabel>
    <relationshipName>User_Modulos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>