force-app/main/default/objects/User_Modulo__c/fields/Puntos__c.field-meta.xml
<CustomField>
    <fullName>Puntos__c</fullName>
    <label>Puntos</label>
    <summarizedField>User_Unidad__c.Puntos__c</summarizedField>
    <summaryForeignKey>User_Unidad__c.User_Modulo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>