force-app/main/default/objects/User_Modulo__c/fields/Unidades_Completadas__c.field-meta.xml
<CustomField>
    <fullName>Unidades_Completadas__c</fullName>
    <label>Unidades Completadas</label>
    <summaryFilterItems>
        <field>User_Unidad__c.Estado__c</field>
        <operation>equals</operation>
        <value>Completado</value>
    </summaryFilterItems>
    <summaryForeignKey>User_Unidad__c.User_Modulo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>