force-app/main/default/objects/User_Modulo__c/fields/Unidades_Totales__c.field-meta.xml
<CustomField>
    <fullName>Unidades_Totales__c</fullName>
    <label>Unidades Totales</label>
    <summaryForeignKey>User_Unidad__c.User_Modulo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>